<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/blue_swap"/>

        <LinearLayout
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <itboom.com.swap.custom_views.SwapTextView
                android:id="@+id/itemTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_header_subtitle"
                android:textSize="19sp"
                android:maxLines="2"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            
            <itboom.com.swap.custom_views.SwapTextView
                android:id="@+id/itemDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_header_subtitle"/>

            <itboom.com.swap.custom_views.SwapTextView
                android:id="@+id/by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:layout_marginTop="5dp"
                android:text="@string/by"/>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <itboom.com.swap.custom_views.SwapButton
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:id="@+id/ask_btn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            style="@style/Widget.Swap.Button.Purple"
            app:cornerRadius="5dp"
            android:textAllCaps="false"
            android:text="@string/ask_for_swap" />

        <ImageView
            android:id="@+id/info_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/about_us"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"/>

    </RelativeLayout>


</LinearLayout>