<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="@color/bg"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.AppActivity">

    <!-- As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions. -->
    <RelativeLayout
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:id="@+id/homeContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <include layout="@layout/action_bar"/>

        </LinearLayout>

        <FrameLayout
            android:layout_below="@id/bar"
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>

    <!-- The drawer is given a fixed width in dp and extends the full height of
         the container. -->

    <LinearLayout
        android:layout_toStartOf="@id/homeContainer"
        android:layout_toLeftOf="@id/homeContainer"
        android:id="@+id/navContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/nav_bg"
        android:orientation="vertical"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:gravity="end"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_marginEnd="-40dp"
                android:layout_marginRight="-40dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/purple_swap"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/all_arrows"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:id="@+id/home"
            android:gravity="center_vertical"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/blue_swap"/>

            <itboom.com.swap.custom_views.SwapTextView
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="center_horizontal"
                android:text="@string/home"
                android:textSize="17sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/language"
            android:gravity="center_vertical"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/language"/>

            <itboom.com.swap.custom_views.SwapTextView
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="center_horizontal"
                android:text="@string/language"
                android:textSize="17sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/profile"
            android:gravity="center_vertical"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/profile"/>

            <itboom.com.swap.custom_views.SwapTextView
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="center_horizontal"
                android:text="@string/profile"
                android:textSize="17sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/myInterests"
            android:gravity="center_vertical"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/interests"/>

            <itboom.com.swap.custom_views.SwapTextView
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="center_horizontal"
                android:text="@string/my_interests"
                android:textSize="17sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/about"
            android:gravity="center_vertical"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/about_us"/>

            <itboom.com.swap.custom_views.SwapTextView
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="center_horizontal"
                android:text="@string/about_us"
                android:textSize="17sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/contact"
            android:gravity="center_vertical"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/contact_us"/>

            <itboom.com.swap.custom_views.SwapTextView
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="center_horizontal"
                android:text="@string/contact_us"
                android:textSize="17sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/logout"
            android:gravity="center_vertical"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/logout"/>

            <itboom.com.swap.custom_views.SwapTextView
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="center_horizontal"
                android:text="@string/logout"
                android:textSize="17sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>